# ldr-harambe-arms-sim2real

./: CLAUDE.md  setup_shortcuts.bash
src/bringup/arm_real_bringup/: CMakeLists.txt  package.xml
src/bringup/arm_real_bringup/config/: controllers.yaml  controllers_gravcomp.yaml  controllers_viewer.yaml
src/bringup/arm_real_bringup/config/ethercat/: left_ankle_pitch_X4.yaml  left_ankle_roll_X4.yaml  left_elbow_pitch_X6.yaml  left_hip_pitch_X8.yaml  left_hip_roll_X8.yaml  left_hip_yaw_X8.yaml  left_knee_X8.yaml  left_shoulder_pitch_X6.yaml  left_shoulder_roll_X6.yaml  left_shoulder_yaw_X4.yaml  left_wrist_roll_X4.yaml  left_wrist_yaw_X4.yaml  right_ankle_pitch_X4.yaml  right_ankle_roll_X4.yaml  right_elbow_pitch_X6.yaml  right_hip_pitch_X8.yaml  right_hip_roll_X8.yaml  right_hip_yaw_X8.yaml  right_knee_X8.yaml  right_shoulder_pitch_X6.yaml  right_shoulder_roll_X6.yaml  right_shoulder_yaw_X4.yaml  right_wrist_roll_X4.yaml  right_wrist_yaw_X4.yaml  waist_yaw_X8.yaml
src/bringup/arm_real_bringup/config/ethercat_gravcomp/: left_ankle_pitch_X4.yaml  left_ankle_roll_X4.yaml  left_elbow_pitch_X6.yaml  left_hip_pitch_X8.yaml  left_hip_roll_X8.yaml  left_hip_yaw_X8.yaml  left_knee_X8.yaml  left_shoulder_pitch_X6.yaml  left_shoulder_roll_X6.yaml  left_shoulder_yaw_X4.yaml  left_wrist_roll_X4.yaml  left_wrist_yaw_X4.yaml  right_ankle_pitch_X4.yaml  right_ankle_roll_X4.yaml  right_elbow_pitch_X6.yaml  right_hip_pitch_X8.yaml  right_hip_roll_X8.yaml  right_hip_yaw_X8.yaml  right_knee_X8.yaml  right_shoulder_pitch_X6.yaml  right_shoulder_roll_X6.yaml  right_shoulder_yaw_X4.yaml  right_wrist_roll_X4.yaml  right_wrist_yaw_X4.yaml  (+1 more)
src/bringup/arm_real_bringup/launch/: arm_real.launch.py  position_viewer.launch.py  recording.launch.py  safety.launch.py
src/bringup/arm_real_bringup/scripts/: check_ethercat.sh  gravity_comp_node.py  homing_sequence.py  setup_realtime.sh
src/control/full_robot_control/: CMakeLists.txt  package.xml
src/control/full_robot_control/config/: controllers_effort.yaml  controllers_position.yaml
src/control/full_robot_control/launch/: control.launch.py
src/hardware_interface/arm_ethercat_safety/: CMakeLists.txt  package.xml
src/hardware_interface/arm_ethercat_safety/config/: estop.yaml  safety_limits.yaml  watchdog.yaml
src/hardware_interface/arm_ethercat_safety/launch/: safety_monitor.launch.py
src/hardware_interface/arm_ethercat_safety/src/: estop_handler.cpp  fault_handler.cpp  joint_limit_monitor.cpp  safety_monitor_node.cpp  watchdog.cpp
src/hardware_interface/myactuator_ethercat/: CMakeLists.txt  package.xml
src/hardware_interface/myactuator_ethercat/config/: myactuator_rmd_x_v4.yaml
src/hardware_interface/myactuator_ethercat/src/: cia402_state_machine.cpp  ethercat_master.cpp  myactuator_slave.cpp  unit_conversion.cpp
src/hardware_interface/myactuator_hardware/: CMakeLists.txt  myactuator_hardware_plugin.xml  package.xml
src/hardware_interface/myactuator_hardware/config/: left_arm_actuators.yaml
src/hardware_interface/myactuator_hardware/src/: myactuator_system.cpp
src/planning/arm_mtc/: CMakeLists.txt  QUICKSTART.md  README.md  package.xml
src/planning/arm_mtc/arm_mtc/: __init__.py
src/planning/arm_mtc/config/: mtc.rviz  mtc_node_params.yaml  pick_place_scene.yaml
src/planning/arm_mtc/launch/: mtc_cylinder.launch.py  mtc_cylinder_grasp.launch.py  mtc_pick_place.launch.py  mtc_pick_place_demo.launch.py  mtc_run.launch.py  mtc_rviz.launch.py  pick_place_demo.launch.py  publish_planning_scene.launch.py  simple_demo.launch.py  simple_pick.launch.py
src/planning/arm_mtc/scripts/: mtc_orchestrator.py  planning_scene_publisher.py  simple_pick.py
src/planning/arm_mtc/src/: mtc_node.cpp  mtc_node2.cpp  mtc_pick_place_cylinder.cpp  pick_place_task.cpp
src/planning/dual_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/planning/dual_arm_moveit_config/config/: chomp_planning.yaml  dual_arm_description.ros2_control.xacro  dual_arm_description.srdf  dual_arm_description.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  sensors_3d.yaml
src/planning/dual_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py
src/planning/dual_arm_moveit_config/scripts/: cycle_poses.py  motion_player.py  motion_recorder.py
src/simulation/dual_arm_isaac/: CMakeLists.txt  package.xml
src/simulation/dual_arm_isaac/config/: controllers.yaml
src/simulation/dual_arm_isaac/launch/: isaac_sim.launch.py
src/simulation/dual_arm_isaac/scripts/: generate_urdf.py  launch_isaac_sim.py  run_isaac_sim.sh
src/teleop/arm_teleop/: CMakeLists.txt  README.md  package.xml
src/teleop/arm_teleop/config/: hand_tracking_teleop.rviz  skeleton_teleop.rviz
src/teleop/arm_teleop/launch/: cartesian_joystick_teleop.launch.py  joystick_teleop.launch.py  keyboard_teleop.launch.py  realsense_skeleton_teleop.launch.py  robot_pose_calibration.launch.py  servo_hand_tracking_teleop.launch.py  servo_joystick_teleop.launch.py  visual_teleop.launch.py
src/teleop/arm_teleop/scripts/: cartesian_joystick_teleop.py  gui_teleop.py  joystick_teleop.py  keyboard_teleop.py  realsense_skeleton_teleop.py  robot_pose_calibration.py  servo_hand_tracking_teleop.py  servo_joystick_teleop.py  skeleton_calibration.py  visual_teleop.py
src/teleop/arm_teleop/src/: joint_teleop_node.cpp
src/tools/arm_gui_tools/: CMakeLists.txt  README_JOINT_MONITOR.md  package.xml  setup.py
src/tools/arm_gui_tools/ui/: ethercat_monitor.ui  full_system_launcher.ui  joint_monitor.ui  joint_state_monitor.ui
src/tools/diagnostic_tools/: CMakeLists.txt
src/tools/diagnostic_tools/config/: position_reader.yaml  position_viewer.rviz
src/tools/diagnostic_tools/launch/: position_reader.launch.py  position_viewer.launch.py
src/tools/diagnostic_tools/src/: position_reader_node.cpp
src/tools/ethercat_tools/: CMakeLists.txt  package.xml  setup.cfg
src/tools/ethercat_tools/scripts/: demo_ethercat_status  demo_joint_offset  demo_joint_state  joint_calibration
(+434 files in other folders)
