<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>myactuator_ethercat</name>
  <version>0.1.0</version>
  <description>Pure C++ EtherLab driver library for MyActuator RMD X V4 EtherCAT servo drives (CiA 402)</description>
  <maintainer email="andrei@ldr-robotics.com">Andrei Dragomir</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- EtherLab IgH master (system dependency) -->
  <!-- Install: https://gitlab.com/etherlab.org/ethercat -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
