<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_mtc</name>
  <version>1.0.0</version>
  <description>MoveIt Task Constructor package for LDR humanoid arm pick-and-place manipulation</description>
  <maintainer email="widemic@gmail.com">andrei-dragomir</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS 2 dependencies -->
  <depend>rclcpp</depend>

  <!-- MoveIt Task Constructor -->
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_task_constructor_msgs</depend>

  <!-- MoveIt dependencies -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>

  <!-- Message dependencies -->
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>

  <!-- Transform dependencies -->
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Eigen -->
  <depend>eigen3_cmake_module</depend>

  <!-- Package dependencies -->
  <depend>moveit_msgs</depend>
  <depend>std_msgs</depend>
  <depend>arm_description</depend>
  <depend>arm_moveit_config</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
