<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ethercat_tools</name>
  <version>0.1.0</version>
  <description>EtherCAT monitoring and diagnostic GUI tools</description>
  <maintainer email="andrei@todo.todo">Andrei Dragomir</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>urdf_parser_py</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
